Fixed node name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rosie_keyboard_controls)
+project(rosie_keyboard_car_controls)
 
 find_package(catkin REQUIRED COMPONENTS roscpp geometry_msgs)
 
@@ -14,6 +14,6 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(rosie_keyboard_controls src/keyboard_controls_node.cpp)
-target_link_libraries(rosie_keyboard_controls ${catkin_LIBRARIES})
-add_dependencies(rosie_keyboard_controls std_msgs)
+add_executable(rosie_keyboard_car_controls src/keyboard_controls_node.cpp)
+target_link_libraries(rosie_keyboard_car_controls ${catkin_LIBRARIES})
+add_dependencies(rosie_keyboard_car_controls std_msgs)
